# template-rust-project

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  lint.yml  lints.yml  publish.yml  release.yml  tests.yml
benches/: project_benchmarks.rs
examples/: basic_usage.rs
src/: cli.rs  logging.rs
tests/testdata/: README.md  check_datasets.sql  download_datasets.sh
