[package]
name = "template-rust-project"
version = "0.2.3"
description = "A template for Rust projects"
repository = "https://github.com/habedi/template-rust-project"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["project-template", "rust", "library", "application"]
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
homepage = "https://github.com/habedi/template-rust-project"
documentation = "https://docs.rs/template-rust-project"
#categories = ["development-tools"]
edition = "2021"

[lib]
name = "template_rust_project"
path = "src/lib.rs"

[[bin]]
name = "template-rust-project"
path = "src/main.rs"

[dependencies]
ctor = "0.2.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "project_benchmarks"
harness = false
